[package]
name = "win_mem"
authors = ["nevalackin <nevalackin@protonmail.com>"]
version = "0.1.0"
description = "win_mem, a winapi wrapper for reading and writing to memory"
repository = "https://github.com/nevalackin/win_mem"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "memoryapi", "winnt", "minwindef", "basetsd", "handleapi", "processthreadsapi"] }